2008-08-01  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	* docs/gst/gstreamer.types:
	  Revert 'accidential' change of the configure option removal. We still
	  need to generate the types file in configure --disable-load-save.

2008-08-01  Stefan Kost  <ensonic@users.sf.net>

	* docs/gst/gstreamer-sections.txt:
	* gst/gsttaglist.h:
	  Add new taglist item GST_TAG_KEYWORDS, needed for #520694 .

2008-08-01  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstpadtemplate.c:
	  (gst_pad_template_class_init), (gst_static_pad_template_get),
	  (gst_pad_template_new), (gst_pad_template_pad_created),
	  (gst_pad_template_set_property), (gst_pad_template_get_property):
	  Add "name-template", "direction", "presence" and "caps" properties,
	  so that gst_pad_template_new() is just a thin wrapper around
	  g_object_new(), which is better for bindings. (Fixes: #539772)

2008-07-31  Michael Smith <msmith@songbirdnest.com>

	* gst/gsturi.c:
	  Be more liberal in what URIs we accept.
	  Do not unescape bits of the URI for no apparent reason before passing to
	  the element. Fixes #545352.

2008-07-31  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Robert Schwebel <r.schwebel@pengutronix.de>

	* gst/gst.c:
	Include gstconfig.h as macros from it are used. Fixes bug #545607.

2008-07-31  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* configure.ac:
	* docs/gst/gstreamer-sections.txt:
	* docs/gst/gstreamer.types:
	* docs/gst/gstreamer.types.in:
	* gst/Makefile.am:
	* gst/gst.c:
	* gst/gstbin.c: (gst_bin_class_init), (gst_bin_set_index_func):
	* gst/gstconfig.h.in:
	* gst/gstelement.c: (gst_element_get_index):
	* gst/gstregistrybinary.c: (gst_registry_binary_save_feature),
	(gst_registry_binary_load_feature),
	(gst_registry_binary_read_cache):
	* gst/gstregistryxml.c: (load_feature),
	(gst_registry_xml_read_cache), (gst_registry_xml_save_feature):
	* plugins/Makefile.am:
	* tools/gst-indent: