@@ -1,3 +1,11 @@
+2008-08-04  Stefan Kost  <ensonic@users.sf.net>
+
+	* gst/gsttaglist.c:
+	* gst/gsttaglist.h:
+	  Do as tim pointed out and actually register the new tag. Also improve
+	  te docs and use gst_tag_merge_strings_with_comma() method to allow
+	  retriving all keywords merged in one list.
+
 2008-08-01  Stefan Kost  <ensonic@users.sf.net>
 
 	* configure.ac:
